# ChangeLog for net-analyzer/nbtscan
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nbtscan/ChangeLog,v 1.25 2008/01/16 20:15:38 grobian Exp $

  16 Jan 2008; Fabian Groffen <grobian@gentoo.org> nbtscan-1.5.1-r1.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  06 Sep 2007; Markus Ullmann <jokey@gentoo.org> -nbtscan-1.5.1.ebuild:
  Cleanup

  28 Oct 2006; Christian Faulhammer <opfer@gentoo.org>
  nbtscan-1.5.1-r1.ebuild:
  x86 stable wrt bug #151519

  24 Oct 2006; Fabian Groffen <grobian@gentoo.org> nbtscan-1.5.1-r1.ebuild:
  Marked ppc-macos stable (bug #151519)

  21 Oct 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  nbtscan-1.5.1-r1.ebuild:
  ppc stable, bug #151519

  18 Oct 2006; Patrick McLean <chutzpah@gentoo.org> nbtscan-1.5.1-r1.ebuild:
  Stable on amd64 (bug #151519).

  16 Oct 2006; Jason Wever <weeve@gentoo.org> nbtscan-1.5.1-r1.ebuild:
  Stable on SPARC wrt bug #151519.

  16 Oct 2006; Markus Ullmann <jokey@gentoo.org> -nbtscan-1.0.3.ebuild,
  nbtscan-1.5.1.ebuild, nbtscan-1.5.1-r1.ebuild:
  QA improvements and cleanup

  19 Jul 2005; David Holm <dholm@gentoo.org> nbtscan-1.5.1-r1.ebuild:
  Added to ~ppc.

*nbtscan-1.5.1-r1 (05 Mar 2005)

  05 Mar 2005; Aaron Walker <ka0ttic@gentoo.org>
  +files/nbtscan-1.5.1-script-whitespace.patch, +nbtscan-1.5.1-r1.ebuild:
  Revision bump; add patch that fixes -s output (bug 84139). Thanks to Josh
  Nichols <nichoj@rpi.edu> for the patch.

  18 Jan 2005; Lina Pezzella <j4rg0n@gentoo.org> nbtscan-1.5.1.ebuild:
  Stable ppc-macos.

  09 Oct 2004; David Holm <dholm@gentoo.org> nbtscan-1.5.1.ebuild:
  Added to ~ppc.

  25 Jul 2004; Lina Pezzella <j4rg0n@gentoo.org> nbtscan-1.5.1.ebuild:
  Unstable on macos.

  19 Jul 2004; Jason Wever <weeve@gentoo.org> nbtscan-1.5.1.ebuild:
  Stable on sparc.

  10 Jul 2004; Eldad Zack <eldad@gentoo.org> nbtscan-1.0.3.ebuild,
  nbtscan-1.5.1.ebuild:
  Tidy, x86 stable
