@@ -1,5 +1,5 @@
 AUX nbtscan-1.5.1-script-whitespace.patch 4023 RMD160 4123c615835c25b431aa2194dcc7ddd274d7363a SHA1 fb1285ded3b2519fb14251d6ad6e0096e3123be9 SHA256 9c0ba92f422c97e6203b1806bc04e02ad4000e3a914d121557912e15a86d6317
 DIST nbtscan-1.5.1.tar.gz 82107 RMD160 5130d9e6decd3346859281f45f8a179aa0286a42 SHA1 4041d8f6b592fa310b8d3c79c56a2d3263dba82f SHA256 f9f95d5555356c8d467a576e69d9d348bf2a821ded9a85f895b5e6d21e2aa7eb
-EBUILD nbtscan-1.5.1-r1.ebuild 856 RMD160 dac01e10860d3547592bfcd4aca8f6e41d97056e SHA1 4b7c397bb93c370d826ccfde100928e1eb035119 SHA256 9ff07545a319ae7ea96a3df229882195a77e96693923a526487c2fbbaff2d6c6
-MISC ChangeLog 3145 RMD160 6f80cd54edb3df02c0f866fbf90ba7a30622360f SHA1 2ee9e5eabe479138a99580a6db7530a0143e2ce1 SHA256 800fbac842b2434311cd580fc697712656feb7abe0d9d1cf0e473f885d496cc5
+EBUILD nbtscan-1.5.1-r1.ebuild 907 RMD160 70f0f8cc536fbb1d779b157a493b834490c07b36 SHA1 6fd352f0d5a79f41bd54399f24171735ee39bd89 SHA256 aa169a5bad357f154dacc11b9d066a4ec0f185e84905267c54a20f0997c1c7b1
+MISC ChangeLog 3328 RMD160 2ccccfe5c5fa2ef02eff5246190375e797aac696 SHA1 81100f144363e2626031cebe2be50f5e35a36502 SHA256 31fa46058903ce453fcf611f33e33252f4aed4f80c9fc1875bb3ad9f0839642c
 MISC metadata.xml 159 RMD160 28e799fe0fd02aaab9d4bbe5595f133101606f5b SHA1 9f5df3eabd621951a959cc8e0e2e0d352cd1fe1e SHA256 b75c711bd971e46f0ec957e833c60879b0c5023e0bb94409a6255781b69f6dc6
