@@ -1,12 +1,13 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nbtscan/nbtscan-1.5.1-r1.ebuild,v 1.9 2008/01/16 20:15:38 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nbtscan/nbtscan-1.5.1-r1.ebuild,v 1.11 2009/05/26 02:28:42 jer Exp $
 
 inherit eutils
 
 DESCRIPTION="NBTscan is a program for scanning IP networks for NetBIOS name information"
-HOMEPAGE="http://www.inetcat.org/software/nbtscan.html"
+HOMEPAGE="http://www.inetcat.net/software/nbtscan.html"
 SRC_URI="http://www.sourcefiles.org/Networking/Tools/Miscellanenous/${P}.tar.gz"
+SRC_URI="http://www.inetcat.net/software/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
