@@ -1,6 +1,12 @@
 # ChangeLog for net-analyzer/nbtscan
-# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nbtscan/ChangeLog,v 1.25 2008/01/16 20:15:38 grobian Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nbtscan/ChangeLog,v 1.27 2009/05/26 02:28:42 jer Exp $
+
+  26 May 2009; Jeroen Roovers <jer@gentoo.org> nbtscan-1.5.1-r1.ebuild:
+  Update SRC_URI too.
+
+  26 May 2009; Jeroen Roovers <jer@gentoo.org> nbtscan-1.5.1-r1.ebuild:
+  Update HOMEPAGE.
 
   16 Jan 2008; Fabian Groffen <grobian@gentoo.org> nbtscan-1.5.1-r1.ebuild:
   Dropped ppc-macos keyword, see you in prefix
